--- a/client/ui/MainWindow.ui
+++ b/client/ui/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>666</width>
-    <height>561</height>
+    <width>714</width>
+    <height>667</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -111,6 +111,18 @@
        <item>
         <widget class="QWidget" name="widget_4" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <property name="leftMargin">
+           <number>2</number>
+          </property>
+          <property name="topMargin">
+           <number>2</number>
+          </property>
+          <property name="rightMargin">
+           <number>2</number>
+          </property>
+          <property name="bottomMargin">
+           <number>2</number>
+          </property>
           <item>
            <widget class="QPushButton" name="clearButton">
             <property name="sizePolicy">
@@ -224,7 +236,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>666</width>
+     <width>714</width>
      <height>23</height>
     </rect>
    </property>
@@ -234,11 +246,24 @@
     </property>
     <addaction name="addFriendAction"/>
    </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>测试</string>
+    </property>
+    <addaction name="actionTestAction1"/>
+   </widget>
    <addaction name="menu"/>
+   <addaction name="menu_2"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="addFriendAction">
    <property name="text">
     <string>增加好友</string>
+   </property>
+  </action>
+  <action name="actionTestAction1">
+   <property name="text">
+    <string>TestAction1</string>
    </property>
   </action>
  </widget>
