--- a/client/ui/MainWindow.ui
+++ b/client/ui/MainWindow.ui
@@ -72,6 +72,12 @@
            <verstretch>4</verstretch>
           </sizepolicy>
          </property>
+         <property name="textElideMode">
+          <enum>Qt::ElideLeft</enum>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
@@ -226,6 +232,13 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPushButton" name="registerButton">
+         <property name="text">
+          <string>注册</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -244,7 +257,15 @@
     <property name="title">
      <string>菜单</string>
     </property>
+    <widget class="QMenu" name="privateKeyMenu">
+     <property name="title">
+      <string>本地密钥管理</string>
+     </property>
+     <addaction name="generatePrivateKeyAction"/>
+     <addaction name="loadPrivateKeyAction"/>
+    </widget>
     <addaction name="addFriendAction"/>
+    <addaction name="privateKeyMenu"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -264,6 +285,16 @@
   <action name="actionTestAction1">
    <property name="text">
     <string>TestAction1</string>
+   </property>
+  </action>
+  <action name="generatePrivateKeyAction">
+   <property name="text">
+    <string>生成</string>
+   </property>
+  </action>
+  <action name="loadPrivateKeyAction">
+   <property name="text">
+    <string>导入</string>
    </property>
   </action>
  </widget>
